[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/playerstats.gd" type="Script" id=1]
[ext_resource path="res://sounds/combat/clang.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/playermove.gd" type="Script" id=3]
[ext_resource path="res://sounds/combat/swoosh.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/combat/ow.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/combat/hitworld.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/combat/teleport.wav" type="AudioStream" id=7]
[ext_resource path="res://icons/mouse.png" type="Texture" id=8]
[ext_resource path="res://scripts/hud.gd" type="Script" id=9]
[ext_resource path="res://icons/gamepad.png" type="Texture" id=10]
[ext_resource path="res://fonts/Body.res" type="DynamicFont" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.764706, 0.764706, 0.764706, 1 )
metallic = 0.85
metallic_specular = 0.0
roughness = 0.69

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.02, 0.2, 0.02 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( -2, 6, 1, 3, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.15, 0, 0 ), Vector3( 0.161, 0, 0 ), Vector3( 0.012, -0.025, 0 ), Vector3( -0.04, -0.074, 0.04 ), Vector3( 0.15, 0.01, 0 ), Vector3( 0.15, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 6, 1, 3, 1, 1 ),
"update": 0,
"values": [ Vector3( -5, 0, 5 ), Vector3( 15, 0, -10 ), Vector3( -65, 0, 30 ), Vector3( -80, 0, 80 ), Vector3( -1, 0, 5 ), Vector3( -5, 0, 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3.1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector3( 0.15, 0, 0 ), Vector3( 0.15, 0.01, 0 ), Vector3( 0.15, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -5, 0, 5 ), Vector3( -5, 0, 3 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "zzz"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=7]
params_diffuse_mode = 3
params_specular_mode = 1
albedo_color = Color( 1, 0, 0.470588, 1 )

[sub_resource type="CapsuleMesh" id=8]
material = SubResource( 7 )
radius = 0.5
radial_segments = 32
rings = 6

[sub_resource type="CylinderShape" id=9]
radius = 0.6

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.25, 0.5, 0.75, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
gravity = Vector3( 0, 0, 0 )
scale = 0.13
color_ramp = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 2

[sub_resource type="QuadMesh" id=14]
material = SubResource( 13 )
size = Vector2( 0.25, 0.25 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.164706, 0.164706, 0.180392, 1 )
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[node name="Player" type="Spatial" groups=[
"Players",
]]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
collision_layer = 2
collision_mask = 2147483655
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" type="Camera" parent="KinematicBody/Head"]
current = true
fov = 90.0

[node name="Viewmodel" type="Spatial" parent="KinematicBody/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, 0, -0.12 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody/Head/Camera/Viewmodel"]
transform = Transform( 0.996195, -0.0871557, 0, 0.0868241, 0.992404, 0.0871557, -0.00759612, -0.0868241, 0.996195, 0.15, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody/Head/Camera/Viewmodel"]
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/zzz = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="AttackRay" type="RayCast" parent="KinematicBody/Head"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 7
__meta__ = {
"_editor_description_": "todo: apply force to known kinematic or rigid body"
}

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 8 )
material/0 = null

[node name="ItemGrabber" type="Area" parent="KinematicBody"]
monitorable = false
collision_layer = 0
collision_mask = 2147483672

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody/ItemGrabber"]
shape = SubResource( 9 )

[node name="AttackCooldown" type="Timer" parent="KinematicBody"]
process_mode = 0
one_shot = true

[node name="AttackWindup" type="Timer" parent="KinematicBody"]
process_mode = 0
one_shot = true

[node name="LobCooldown" type="Timer" parent="KinematicBody"]
process_mode = 0
one_shot = true

[node name="LobWindup" type="Timer" parent="KinematicBody"]
process_mode = 0
one_shot = true

[node name="Sounds" type="Node" parent="KinematicBody"]

[node name="Swoosh" type="AudioStreamPlayer" parent="KinematicBody/Sounds"]
stream = ExtResource( 4 )
volume_db = -12.0
bus = "SFX"

[node name="Clang" type="AudioStreamPlayer" parent="KinematicBody/Sounds"]
stream = ExtResource( 2 )
volume_db = -13.0
bus = "SFX"

[node name="HitWorld" type="AudioStreamPlayer" parent="KinematicBody/Sounds"]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "SFX"

[node name="Teleport" type="AudioStreamPlayer" parent="KinematicBody/Sounds"]
stream = ExtResource( 7 )
volume_db = -17.0
bus = "SFX"

[node name="Ow" type="AudioStreamPlayer" parent="KinematicBody/Sounds"]
stream = ExtResource( 5 )
volume_db = -13.0
bus = "SFX"

[node name="Particles" type="Particles" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
visible = false
amount = 50
lifetime = 2.5
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )

[node name="HUD" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 584.0

[node name="Timer" type="Panel" parent="HUD/Control"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_right = 24.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Control/Timer"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "60"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Panel" parent="HUD/Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Control/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HUD/Control/Score/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 47.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUD/Control/Score/MarginContainer/VBox"]
margin_right = 81.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HUD/Control/Score/MarginContainer/VBox"]
margin_top = 14.0
margin_right = 81.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="HUD/Control/Score/MarginContainer/VBox"]
margin_top = 18.0
margin_right = 81.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "000"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notifier" type="MarginContainer" parent="HUD/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 46
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="VBoxContainer" parent="HUD/Control/Notifier"]
margin_top = 46.0
margin_right = 1248.0
margin_bottom = 568.0

[node name="Label" type="Label" parent="HUD/Control/Notifier/Control"]
margin_left = 615.0
margin_right = 633.0
margin_bottom = 14.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/Control/Notifier/Control/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseReminder" type="TextureRect" parent="HUD/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Control/MouseReminder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -68.0
margin_right = 101.0
margin_bottom = 11.5
custom_fonts/font = ExtResource( 11 )
text = "Use WASD + Left Click"
align = 1

[node name="JoyReminder" type="TextureRect" parent="HUD/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD/Control/JoyReminder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -68.0
margin_right = 136.0
margin_bottom = 11.5
custom_fonts/font = ExtResource( 11 )
text = "Use Left Stick + R2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="KinematicBody/ItemGrabber" to="KinematicBody" method="_on_ItemGrabber_area_entered"]
[connection signal="timeout" from="KinematicBody/AttackCooldown" to="KinematicBody" method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="KinematicBody/AttackWindup" to="KinematicBody" method="_on_AttackWindup_timeout"]
[connection signal="timeout" from="KinematicBody/LobCooldown" to="KinematicBody" method="_on_LobCooldown_timeout"]
[connection signal="timeout" from="KinematicBody/LobWindup" to="KinematicBody" method="_on_LobWindup_timeout"]
